--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             initBanner();
             createBook();
             createBestSeller();
+            createCart();
             renderBestseller();
             loadPage();
         }
@@ -162,7 +163,7 @@
                     </script>
                 </p>&nbsp;
                 <a href="admin.html" id="admin"><i class="fas fa-duotone fa-gear" title="Quản lý"></i>&nbsp;</a>
-                <i class="fas fa-solid fa-cart-shopping" title="Giỏ hàng"></i>&nbsp;
+                <a href="/index.html?shoppingcart"><i class="fas fa-solid fa-cart-shopping" title="Giỏ hàng"></i>&nbsp;</a>
                 <i class="fas fa-solid fa-bell" title="Thông báo"></i>&nbsp;
                 <i class="fas fa-solid fa-user" id="icon-login" title="Đăng nhập" onclick="showLogin()"></i>
                 <i class="fas fa-solid fa-right-from-bracket" id="icon-logout" title="Đăng xuất" onclick="logout()"></i>
