--- a/admin.html
+++ b/admin.html
@@ -137,7 +137,7 @@
                     <input class="inp" type="text" id="price-Editproduct">
                 </div>
                 <div class="deleteItem">
-                    <input  type="submit" value="Xóa sản phẩm">
+                    <input  type="button" value="Xóa sản phẩm" onclick="deleteProduct();">
                 </div>
             </div>
             <div class="img">
