--- a/index.html
+++ b/index.html
@@ -147,10 +147,8 @@
             </ul>
 
             <div id="search">
-                <form action="">
-                    <i class="fas fa-solid fa-magnifying-glass"></i>&nbsp;
-                    <input type="text" size="20%" placeholder="Tìm kiếm">
-                </form>
+                <i style="cursor: pointer;" class="fas fa-solid fa-magnifying-glass" title="Tìm kiếm" onclick="search()"></i>&nbsp;
+                <input id="searchPro" type="text" size="20%" placeholder="Tìm kiếm" >
             </div>
 
             <div id="user">
