--- a/admin.html
+++ b/admin.html
@@ -155,5 +155,13 @@
             </div>
         </form>
     </div>
+    <div class="showOrder" id="showOrder">
+        <div id="close">
+            <i class="fa-solid fa-xmark" onclick="backFromDiv()"></i>
+        </div>
+        <div class="detailOrder" id="detailOrder">
+
+        </div>
+    </div>
 </body>
 </html>
