xong rrrrrrrrrrrrr dcmmm

--- a/admin.html
+++ b/admin.html
@@ -37,7 +37,7 @@
                 </li>
                 <li>
                     <i class="fas fa-solid fa-circle-info" title="Quản lí thông tin"></i>
-                    <a href="/admin.html?quanlithongtin">Quản lí thông tin</a>
+                    <a href="/admin.html?thongke">Thống kê</a>
                 </li>
                 <li>
                     <i class="fas fa-solid fa-right-from-bracket" title="Đăng xuất"></i>
