--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <a href="index.html"><div>Trang Chủ</div></a>
                 </li>
 
-                <li class="parent-menu" style="">
+                <li class="parent-menu">
                     <a href="index.html" title="Sách"><div>Sách <i class="fas fa-solid fa-caret-down"></i></div></a>
                     <ul class="sub-topmenu">
                         <li>
@@ -312,7 +312,7 @@
             <i class="fas fa-arrow-circle-up" onclick="backtop()"></i>
         </div>
     </div>
-    <div id="container" onclick="backFromDiv()()">
+    <div id="container" onclick="backFromDiv()">
 
     </div>
     <div id="login">
