--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 </li>
 
                 <li class="parent-menu">
-                    <a href="" title="Hỗ Trợ"><div>Hỗ Trợ</div></a>
+                    <a href="/index.html?support" title="Hỗ Trợ"><div>Hỗ Trợ</div></a>
                 </li>
             </ul>
 
