--- a/admin.html
+++ b/admin.html
@@ -81,11 +81,36 @@
                 </div>
                 <h3 class="txt">Thể loại</h3>
                 <div>
-                    <input class="inp" type="text" id="cat-product">
+                    <select class="inp" name="" id="cat-product">
+                        <option value="" selected disabled>Chọn thể loại</option></option>
+                        <option value="Sách giáo khoa">Sách giáo khoa</option>
+                        <option value="Sách tham khảo">Sách tham khảo</option>
+                        <option value="Từ điển">Từ điển</option>
+                        <option value="Truyện ngắn">Truyện ngắn</option>
+                        <option value="Truyện dài">Truyện dài</option>
+                        <option value="Thơ">Thơ</option>
+                        <option value="Khác">Văn học khác</option>
+                        <option value="Ngôn tình">Tiểu thuyết ngôn tình</option>
+                        <option value="Giả tưởng">Tiểu thuyết giả tưởng</option>
+                        <option value="Tiểu thuyết Lịch sử">Tiểu thuyết Lịch sử</option>
+                        <option value="Quản trị">Quản trị</option>
+                        <option value="Marketing">Marketing</option>
+                        <option value="Nhân vật">Nhân vật</option>
+                        <option value="Khởi nghiệp">Khởi nghiệp</option>
+                        <option value="Chứng khoán">Chứng khoán</option>
+                        <option value="Tâm lý">Tâm lý</option>
+                        <option value="Kỹ năng sống">Kỹ năng sống</option>
+                        <option value="Hạt giống tâm hồn">Hạt giống tâm hồn</option>
+                        <option value="Lịch sử Việt Nam">Lịch sử Việt Nam</option>
+                        <option value="Lịch sử Thế giới">Lịch sử Thế giới</option>
+                        <option value="Truyện thiếu nhi">Truyện thiếu nhi</option>
+                        <option value="Tô màu">Tô màu</option>
+                        <option value="Luyện chữ">Luyện chữ</option></select>
+                    </select>
                 </div>
                 <h3 class="txt">Số lượng</h3>
                 <div>
-                    <input class="inp" type="text" id="quantity-product">
+                    <input class="inp" type="number" id="quantity-product" min="0">
                 </div>
                 <h3 class="txt">Giá bán (vnd)</h3>
                 <div>
@@ -126,11 +151,35 @@
                 </div>
                 <h3 class="txt">Thể loại</h3>
                 <div>
-                    <input class="inp" type="text" id="cat-Editproduct">
+                    <select class="inp" name="" id="cat-product">
+                        <option value="Sách giáo khoa">Sách giáo khoa</option>
+                        <option value="Sách tham khảo">Sách tham khảo</option>
+                        <option value="Từ điển">Từ điển</option>
+                        <option value="Truyện ngắn">Truyện ngắn</option>
+                        <option value="Truyện dài">Truyện dài</option>
+                        <option value="Thơ">Thơ</option>
+                        <option value="Khác">Văn học khác</option>
+                        <option value="Ngôn tình">Tiểu thuyết ngôn tình</option>
+                        <option value="Giả tưởng">Tiểu thuyết giả tưởng</option>
+                        <option value="Tiểu thuyết Lịch sử">Tiểu thuyết Lịch sử</option>
+                        <option value="Quản trị">Quản trị</option>
+                        <option value="Marketing">Marketing</option>
+                        <option value="Nhân vật">Nhân vật</option>
+                        <option value="Khởi nghiệp">Khởi nghiệp</option>
+                        <option value="Chứng khoán">Chứng khoán</option>
+                        <option value="Tâm lý">Tâm lý</option>
+                        <option value="Kỹ năng sống">Kỹ năng sống</option>
+                        <option value="Hạt giống tâm hồn">Hạt giống tâm hồn</option>
+                        <option value="Lịch sử Việt Nam">Lịch sử Việt Nam</option>
+                        <option value="Lịch sử Thế giới">Lịch sử Thế giới</option>
+                        <option value="Truyện thiếu nhi">Truyện thiếu nhi</option>
+                        <option value="Tô màu">Tô màu</option>
+                        <option value="Luyện chữ">Luyện chữ</option></select>
+                    </select>
                 </div>
                 <h3 class="txt">Số lượng</h3>
                 <div>
-                    <input class="inp" type="text" id="quantity-Editproduct">
+                    <input class="inp" type="number" id="quantity-Editproduct" min="0">
                 </div>
                 <h3 class="txt">Giá bán (vnd)</h3>
                 <div>
