--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
             </div>
             <div>
                 <label class="txt" for="email-signup">Email</label>
-                <input id="email-signup" class="inp" type="text" placeholder="Email">    
+                <input id="email-signup" class="inp" type="email" placeholder="Email">    
             </div>
             <div>
                 <label class="txt" for="password-signup">Password</label>
